[package]
name = "minacalc-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "http2", "charset"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sha1_smol = {version = "1", features = ["std", "serde"]}
minacalc-rs = {version = "0.2.2", features = ["hashmap", "thread", "osu", "utils"] }
anyhow = "1.0.100"
rosu-map = "0.2.1"
dotenvy = "0.15"
fs_extra = "1.3"
dirs = "5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
